--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dicas.JS</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://kit.fontawesome.com/78c68c91f5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -51,31 +53,182 @@
             </div>
         </section>
 
-        <section class="section1">
+        <section class="section1 content">
+
+            <P>Listar todas as bibliotecas JavaScript é impossível devido à vastidão e constante evolução do ecossistema. No entanto, aqui estão algumas das mais populares e usadas:</P>
 
             <h2>1. Manipulação do DOM e Utilitários</h2>
 
             <div class="cards">
-                <div>
+                <div class="efect">
                     <p>jQuery:</p>
 
-                    <img src="" alt="">
+                    <img src="./image/jquery.svg" alt="" loading="lazy">
 
                     <p>Simplifica a manipulação do DOM, eventos, animações e Ajax.</p>
                 </div>
 
-                <div>
+                <div class="efect">
                     <p>Lodash:</p>
 
-                    <img src="" alt="">
+                    <img src="./image/lodash.svg" alt="" loading="lazy">
 
-                    <p> Fornece utilitários para tarefas comuns de programação, como manipulação de arrays e objetos..</p>
+                    <p> Fornece utilitários para tarefas comuns de programação, como manipulação de arrays e objetos.</p>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="section2 content">
+
+            <h2>2. Frameworks e Bibliotecas de Componentes de Interface</h2>
+
+            <div class="cards">
+                <div class="efect">
+                    <p>React:</p>
+
+                    <img src="./image/react.svg" alt="" loading="lazy">
+
+                    <p>Biblioteca para construir interfaces de usuário.</p>
+                </div>
+
+                <div class="efect">
+                    <p>Vue.js:</p>
+
+                    <img src="./image/vuedotjs.svg" alt="" loading="lazy">
+
+                    <p>Framework progressivo para a construção de interfaces de usuário.</p>
+                </div>
+
+                <div class="efect">
+                    <p>Angular:</p>
+
+                    <img src="./image/angular.svg" alt="" loading="lazy">
+
+                    <p>Framework completo para o desenvolvimento de aplicações web.</p>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="section3 content">
+
+            <h2>3. Gerenciamento de Estado</h2>
+
+            <div class="cards">
+                <div class="efect">
+                    <p>Redux:</p>
+
+                    <img src="./image/redux.svg" alt="" loading="lazy">
+
+                    <p>Biblioteca para gerenciamento de estado previsível.</p>
+                </div>
+
+                <div class="efect">
+                    <p>MobX:</p>
+
+                    <img src="./image/mobx.svg" alt="" loading="lazy">
+
+                    <p>Biblioteca de gerenciamento de estado reativa.</p>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="section4 content">
+
+            <h2>4. Frameworks de Aplicações de Back-End</h2>
+
+            <div class="cards">
+                <div class="efect">
+                    <p>Node.js:</p>
+
+                    <img src="./image/nodedotjs.svg" alt="" loading="lazy">
+
+                    <p>Ambiente de execução JavaScript no lado do servidor.</p>
+                </div>
+
+                <div class="efect">
+                    <p>Express.js:</p>
+
+                    <img src="./image/express.svg" alt="" loading="lazy">
+
+                    <p>Framework web para Node.js.</p>
+                </div>
+
+                <div class="efect">
+                    <p>Koa:</p>
+
+                    <img src="./image/koa.svg" alt="" loading="lazy">
+
+                    <p>Framework web mais moderno e leve para Node.js.</p>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="section5 content">
+
+            <h2>5. Testes</h2>
+
+            <div class="cards">
+                <div class="efect">
+                    <p>Jest:</p>
+
+                    <img src="./image/jest.svg" alt="" loading="lazy">
+
+                    <p>Estrutura de teste JavaScript focada em simplicidade.</p>
+                </div>
+
+                <div class="efect">
+                    <p>Mocha:</p>
+
+                    <img src="./image/mocha.svg" alt="" loading="lazy">
+
+                    <p>Estrutura de teste com um grande ecossistema de plugins.</p>
+                </div>
+
+                <div class="efect">
+                    <p>Chai:</p>
+
+                    <img src="./image/chai.svg" alt="" loading="lazy">
+
+                    <p>Biblioteca de asserção que pode ser usada com Mocha.</p>
                 </div>
             </div>
 
         </section>
     </main>
 
+    <footer>
+        
+        <div class="div-footer1">
+            <h1>Dicas.<span>JS</span></h1>
+
+        <p>dicas.js@gmail.com</p>
+        </div>
+
+        <hr>
+
+        <div class="div-footer2">
+            
+            <div>
+                <h3>Redes Sociais:</h3>
+
+                <ul>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-x-twitter"></i></li>
+                </ul>
+            </div>
+
+            <div>
+                <h3>QUEM SOMOS?</h3><p>somos apaixonados por programação e comprometidos em ajudar <br> desenvolvedores de todos os níveis a dominar JavaScript com tutoriais, <br> dicas práticas e as últimas novidades do universo JS.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
